--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(250, 250, 250);
+  /* background-color: rgb(236, 236, 236); */
+  background-color: #c1c5e7b9;
   height: 100vh;
 }
 
