--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  /* background-color: rgb(235, 231, 231); */
+  background-color: #d8d8dc;
 }
 
 code {
